# Ysearch-process

./: .gitignore  README.md  api.py  config.py  data_searcher.py  docker-compose.yml  dockerfile  download_producer.py  indexation.py  indexer.py  indexer_consumer.py  logger.py  main.py  manage.py  producer.py  pyproject.toml  readme.md  req.txt  requirement.txt  requirements.txt  search_api.py  sequencer.py  struct.docker-compose.yml  subscribe.py  try_crawl.py  vectoriser.py  vectoriseur.py  vectorize_gpu_consumer.py  vectorizer_consumer.py  warc_donwloader.py  warc_downloader.py
Ysearch_api/: asgi.py  settings.py  urls.py  wsgi.py
domain/: models.py
models/: url.py
